# noc-mcp-server

./: .env  .gitignore  FASTMCP_SETUP.md  LICENSE  README.md  __init__.py  config.py  mcp_config.json  pyproject.toml  startmcp.sh  test_mcp_server_e2e.py
agents/: syslog_agent.py  syslog_tools.py
config/: tool_packages.yaml
core/: __init__.py  mcp_client.py  mcp_server.py  mcp_tools.py  tool_registry.py
datasets/: SyslogReasonerProvider_devset.json  SyslogReasonerProvider_trainset.json  devset_avatar.txt  trainset_avatar.txt
lib/: __init__.py  data_loader.py  datastore.py  datastore_interface.py  logging_helpers.py  optimization_base.py
lib/network_interface/cli/: modules.py  netio.py  signatures.py
lib/syslog_interface/: message_compression.py  syslog.py  syslog_processor.py
lib/syslog_modeler/: __init__.py  base.py  hardware_patterns.py  model_builder.py  models.py  syslog_patterns.py  test_patterns.py
metrics/: metric.py
settings/: settings.py
tools/: google_search.py  log_message_reader.py  objective_analyzer.py  show_commands_synthesis.py  splunk_ics.py  splunk_logs.py  splunk_rag.py  syslog_high_impact_evaluator.py  syslog_holistic_reasoner.py
tools/lib/: base_models.py
